# SimpleGNN

./: .gitignore  AGENTS.md  CACHE_IMPLEMENTATION.md  GEMINI.md  IMPLEMENTATION.md  README.md  README.rst  TODO.md  install.sh  pyproject.toml  requirements.txt  setup.py
.claude/: CLAUDE.md  Claude_general.md  settings.json
docs/: CACHE_IMPLEMENTATION_SUMMARY.md  CHANGES.md  CustomLabeling.md  IMPLEMENTATION_COMPLETE.md  OPTIMIZATION_RESULTS.md  TESTING_CHECKLIST.md  conf.py  index.rst
examples/: basic_example.py  comparison_example.py  custom_dataset_example.py  custom_model_example.py
examples/basic_example/: main.py  main.yml  parameters.yml
examples/basic_example_share_gnn/: main.py  main.yml  models_ShareGNN.yml
examples/classical_gnns/: main.py  main.yml  models_GCN.yml  models_GIN.yml  models_GIN_ZINC.yml  parameters_ZINC.yml
examples/share_gnn_basic/: main.py  main.yml  models_ShareGNN.yml
examples/share_gnn_hyperparameter_search/: main.py  models_ShareGNN.yml  parameters.yml
examples/test_betweenness/: main.py  main.yml  models_ShareGNN.yml  parameters.yml
examples/zinc/: main.py  main.yml  models_ShareGNN.yml  parameters.yml  run_zinc.sh  test_models_ShareGNN.yml
experiments/base_paper/: MIGRATION_PLAN.md  QM9.sh  TUDatasets.sh  TUDatasets_ablation.sh  ZINC.sh  ZINC_full.sh  ZINC_test.sh  substructure_counting.sh  synthetic.sh
experiments/base_paper/src/: classification_baselines.py  classification_sharegnn.py  get_gnn_comparison_data.py  (+3 more)
experiments/ogb/: models_ShareGNN.yml  parameters.yml
sample/: __init__.py  core.py  helpers.py
specs/: 00-analysis-overview.md  01-sharegnn-optimizations.md  02-training-pipeline-optimizations.md  03-model-infrastructure-bugs.md  04-dataset-and-config-improvements.md  05-parallel-layer-initialization.md  06-invariant-layer-torch-unique-optimization.md  06-package-installation-implementation.md  07-transfer-learning-redesign.md  07a-transfer-learning-config-schema.md  Documentation.md  agent-workflow-original.md  fair-per-fold-evaluation.md  modern-gnn-integration-roadmap.md  next_steps.md
src/datasets/: custom_datasets.py  dataset_sources.yml  graph_dataset.py  graph_dataset_preprocessing.py
src/framework/: __init__.py  core.py  model_configuration.py  run_configuration.py
src/models/: __init__.py  model.py
src/simplegnn/: __init__.py  metrics.py
src/utils/: path_conversions.py  utils.py
tests/: conftest.py  test_advanced.py  test_api_lazy_exports.py  test_basic.py  test_benchmark.py  test_cache.py  test_cache_direct.py  test_cache_implementation.py  test_cache_methods.py  test_configuration_checks_unit.py  test_core_helpers_unit.py  test_data_sampling_unit.py  test_datasets.py  test_graph_dataset_helpers_unit.py  test_graph_model_unit.py  test_imports_and_loader_api.py  test_layer_integration.py  test_layer_loader_unit.py  test_load_model_path_resolution_unit.py  test_metrics.py  test_models.py  test_node_labeling_helpers_unit.py  test_parameters_unit.py  test_path_and_misc_utils_unit.py  test_preprocessing_utils_unit.py  test_run_configuration_unit.py  test_torch_unique_optimization.py  verify_implementation.sh
(+2743 files in other folders)
