[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-gnn"
version = "0.1.0"
description = "A PyTorch-based Graph Neural Network experimentation framework for benchmarking and developing GNN architectures"
readme = "README.md"
authors = [{name = "Florian Seiffarth"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<3.14"
keywords = ["graph neural networks", "gnn", "pytorch", "machine learning"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch-geometric>=2.7.0,<3.0",
    "joblib>=1.5.3,<2.0",
    "PyYAML>=6.0.3,<7.0",
    "pandas>=2.3.3,<3.0",
    "matplotlib>=3.10.8,<4.0",
    "ogb>=1.3.6,<2.0",
    "click>=8.3.1,<9.0",
    "rdkit>=2025.9.4",
]

[project.urls]
Repository = "https://github.com/fseiffarth/SimpleGNN.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["simplegnn*"]

[tool.setuptools.package-data]
"simplegnn.datasets" = ["*.yml", "splits/**/*.json"]
